[package]
name = "brutal_i18n"
authors = ["Arttu Mykkänen"]
description = "A nonchalant i18n library, inspired by rust-i18n; load a YAML file for some compile time action, get translation texts at runtime."
version = "0.3.0"
edition = "2021"
license = "MIT"
keywords = ["i18n", "l10n", "internationalization", "localization", "macro", "translation"]

[dependencies]
serde = "1.0"
serde_yaml = "0.9"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true
